# cpp_serialize

./: .clang-format  CMakeLists.txt  README.md
.cursor/rules/: cpp-rule.mdc
docs/: tlv_refactor.md  tlv_writer_设计文档.md  yyjson.md  让任意聚合类型支持tuple接口.md
include/: bind_to_tuple.h  define_tuple_interface.h  define_type_traits.h  field_access.h  field_convert.h  field_mapping.h  field_operator.h
include/core/: define_tuple_interface.h  field_access.h  field_convert.h  field_mapping.h  fields.h  get_field_names.h  literal.h  string_literal.h
include/json/: json_writer.h
include/tlv/: deprecated_tlv_writer.h  metadata_type_define.h  tlv_writer.h
src/: field.h  main.cpp
src/json/: json_writer.cpp
test/: CMakeLists.txt  readme.md  test_field_access.cpp  test_field_mapping.cpp  test_string_literal.cpp  test_tlv_writer.cpp  test_tuple_interface.cpp  test_type_traits.cpp
